# filler-sound-detector

./: .gitignore  3-1-train-baseline-LGBM.ipynb  README.md  constants.py  pyproject.toml
clients/: gdrive.py
notebooks/: 1-parse-annotations.ipynb  2-build-training-data.ipynb  3-train-first-model.ipynb  3-train-model.ipynb  4-fine-tune-mlp.ipynb  5-lstm.ipynb
src/: __init__.py  utils.py
src/evaluate/: __init__.py  evaluate.py
src/model/: base_estimator.py  data_builder.py  lstm.py  multi_layer_perceptron.py
src/preprocess/: feature_extractor.py  label_parser.py  normalizer.py  preprocess.py  target_processor.py
test/unit/: test_target_processor.py
