[tool.poetry]
name = "filler-sound-detector"
version = "0.1.0"
description = "Detect filler sounds automatically in audio tracks!"
authors = ["Pavlo Seimskyi <pavlo@dataforfuture.org>"]
readme = "README.md"
packages = [{include = "filler_sound_detector"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
torch = "^1.12.1"
pytest = "^7.1.3"
torchaudio = "^0.12.1"
matplotlib = "^3.6.1"
seaborn = "^0.12.0"
plotly = "^5.10.0"
pydrive = "^1.3.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.0"
ipykernel = "^6.17.1"
ipywidgets = "^8.0.2"
jupyterlab-code-formatter = "^1.5.3"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
