[tool.poetry]
name = "filler-sound-detector"
version = "0.1.0"
description = "Detect filler sounds automatically in audio tracks!"
authors = ["Pavlo Seimskyi <pavlo@dataforfuture.org>"]
readme = "README.md"
packages = [{include = "filler_sound_detector"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
numpy = "^1.23.4"
pytest = "^7.2.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
scikit-learn = "^1.1.3"
lightgbm = "^3.3.3"
xgboost = "^1.7.1"
torch = "~1.12"
torchaudio = "~0.12"
pydrive = "^1.3.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.0"
ipykernel = "^6.17.1"
ipywidgets = "^8.0.2"
jupyterlab-code-formatter = "^1.5.3"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
